--- a/.github/workflows/icon-sync.yml
+++ b/.github/workflows/icon-sync.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           # This points to the Figma URL of our current icon kit
           FIGMA_FILE_URL: "https://www.figma.com/file/5w5yku9JwPTye1fSvk5BOX/actions-test"
-          FIGMA_TOKEN: ${{ env.MY_FIGMA_TOKEN }}
+          FIGMA_TOKEN: ${{ secrets.MY_FIGMA_TOKEN }}
       # Move the output files to our icons folder and run the icon linter on them 
       - run: |
           sudo cp -R ./figma/svg/. ./icons/
@@ -42,7 +42,7 @@ jobs:
       # Create a PR if there are any file diffs
       - uses: peter-evans/create-pull-request@v2
         with:
-          token: ${{ env.MY_GITHUB_TOKEN }}
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
           commit-message: "chore: sync icons with Figma"
           title: "Sync icons from Figma"
           branch: "figma-icon-sync"
