--- a/.github/workflows/icon-sync.yml
+++ b/.github/workflows/icon-sync.yml
@@ -40,11 +40,9 @@ jobs:
           sudo rm -r ./figma
       # sudo yarn icon-lint write "./icons/*.svg"
       # Create a PR if there are any file diffs
-      - uses: peter-evans/create-pull-request@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}   
+      - uses: peter-evans/create-pull-request@v3   
         with:
-        # token: ${{ secrets.MY_GITHUB_TOKEN }}
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
           commit-message: "chore: sync icons with Figma"
           title: "Sync icons from Figma"
           branch: "figma-icon-sync"
