--- a/.github/workflows/figma-icon-sync.yml
+++ b/.github/workflows/figma-icon-sync.yml
@@ -1,9 +1,9 @@
 name: Sync icons from Figma
 on:
-  workflow_dispatch:
-#   schedule:
-#     # Every 5 minutes
-#     - cron:  '*/5 * * * *'
+# workflow_dispatch:
+  schedule:
+  # Every 5 minutes
+    - cron: '*/5 * * * *'
 jobs:
   all:
     name: Sync icons
