--- a/.github/workflows/figma-icon-sync.yml
+++ b/.github/workflows/figma-icon-sync.yml
@@ -3,7 +3,7 @@ on:
 # workflow_dispatch:
   schedule:
   # Every 5 minutes
-    - cron: '*/5 * * * *'
+    - cron: '5 * * * *'
 jobs:
   all:
     name: Sync icons
