--- a/.github/workflows/figma-icon-sync.yml
+++ b/.github/workflows/figma-icon-sync.yml
@@ -2,7 +2,7 @@ name: Sync icons from Figma
 on:
   schedule:
     # Every 5 minutes
-    - cron: '5 * * * *'
+    - cron: '* * * * *'
 jobs:
   all:
     name: Sync icons
